# chainnew-skelly-pn52

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  justfile  rust-toolchain.toml
.cargo/: config.toml
apps/hyper-pn52-doctor/: Cargo.toml
apps/hyper-pn52-doctor/src/: main.rs
apps/hyper-slate-kms-prototype/: Cargo.toml
apps/hyper-slate-kms-prototype/src/: main.rs
apps/hyper-slate-vm-demo/: Cargo.toml
apps/hyper-slate-vm-demo/src/: main.rs
apps/hyper-uefi-probe/: Cargo.toml
apps/hyper-uefi-probe/src/: main.rs
apps/hyperctl/: Cargo.toml
apps/hyperctl/src/: main.rs
apps/qrsectl/: Cargo.toml
apps/qrsectl/src/: main.rs
crates/hyper-amd-svm/: Cargo.toml
crates/hyper-amd-svm/src/: iommu.rs  lib.rs  msr.rs  npt.rs  svm.rs  vmcb.rs
crates/hyper-attest/: Cargo.toml
crates/hyper-attest/src/: kms.rs  lib.rs  pcr.rs  secret.rs
crates/hyper-capsule/: Cargo.toml
crates/hyper-capsule/src/: lib.rs
crates/hyper-control/: Cargo.toml
crates/hyper-control/src/: control.rs  error.rs  lib.rs
crates/hyper-devices/: Cargo.toml
crates/hyper-devices/src/: lib.rs
crates/hyper-mm/: Cargo.toml
crates/hyper-mm/src/: lib.rs
crates/hyper-net/: Cargo.toml
crates/hyper-net/src/: hash.rs  lib.rs  policy.rs  sandbox.rs  switch.rs
crates/hyper-pn52/: Cargo.toml
crates/hyper-pn52/src/: acpi.rs  inventory.rs  lib.rs  pci.rs  report.rs  security.rs
crates/hyper-policy/: Cargo.toml
crates/hyper-policy/src/: document.rs  engine.rs  hash.rs  lib.rs
crates/hyper-qrse/: Cargo.toml
crates/hyper-qrse/examples/: gen_sample.rs
crates/hyper-qrse/src/: combiner.rs  crypto.rs  downgrade.rs  hierarchy.rs  keyslot.rs  lib.rs  manifest.rs  unlock.rs
crates/hyper-qrse/tests/: qrse_acceptance.rs
crates/hyper-receipts/: Cargo.toml
crates/hyper-receipts/src/: hash.rs  lib.rs  receipt.rs  security.rs
crates/hyper-slate-core/: Cargo.toml
crates/hyper-slate-core/src/: boot.rs  keys.rs  lib.rs  manifest.rs  policy.rs
crates/hyper-storage/: Cargo.toml
crates/hyper-storage/src/: attestation.rs  key_hierarchy.rs  lib.rs  luks.rs  pqc.rs  provisioning.rs
crates/hyper-vcpu/: Cargo.toml
crates/hyper-vcpu/src/: lib.rs
crates/hyper-virtio/: Cargo.toml
crates/hyper-virtio/src/: blk.rs  console.rs  error.rs  hash.rs  lib.rs  net.rs  rng.rs
crates/hyper-vm/: Cargo.toml
crates/hyper-vm/src/: README.md  backend.rs  error.rs  lib.rs  model.rs  runtime.rs  spec.rs
crates/hyper-vm/tests/: v0_acceptance.rs
crates/hyper-x86/: Cargo.toml
crates/hyper-x86/src/: cpu.rs  lib.rs  memmap.rs  pci.rs  port.rs  serial.rs
docs/: 00_scope.md  01_architecture.md  02_boot_chain.md  03_storage_pqc.md  04_threat_model.md  05_lab_safety.md  06_roadmap.md  06_virtual_framework.md  07_defensive_controls.md  07_test_plan.md  08_ci_gate_plan.md  08_manifest_schema.md  09_framework_build_plan.md  09_virtual_framework.md  10_qrse_architecture.md  10_quantum_resistant_storage_plan.md
examples/tiny_guest/: README.md
manifests/: boot-policy.schema.json  chainvm-capsule.schema.json  firmware-baseline.schema.json  qrsd-v1.schema.json  receipt.schema.json  sample.boot-policy.json  sample.chainvm-capsule.json  sample.firmware-baseline.json  sample.qrsd-v1.json  sample.volume-manifest.json  vm-capsule-manifest.schema.json  volume-manifest.schema.json
manifests/examples/: guest-zero.chainvm.json
scripts/: build_uefi.sh  collect_stage_b.sh  create_luks2_dev.sh  dump_spi_readonly.sh  enroll_tpm2_luks2.sh  hash_artifacts.sh  run_qemu_ovmf.sh  sign_uki_policy_example.sh
tests/fixtures/: README.md
