[workspace]
resolver = "2"
members = [
    "crates/hyper-slate-core",
    "crates/hyper-pn52",
    "crates/hyper-x86",
    "crates/hyper-amd-svm",
    "crates/hyper-storage",
    "crates/hyper-receipts",
    "crates/hyper-policy",
    "crates/hyper-capsule",
    "crates/hyper-vm",
    # slate-runtime virtual framework (V0 host-testable layer)
    "crates/hyper-receipts",
    "crates/hyper-capsule",
    "crates/hyper-policy",
    "crates/hyper-mm",
    "crates/hyper-attest",
    "crates/hyper-vcpu",
    "crates/hyper-devices",
    "crates/hyper-net",
    "crates/hyper-virtio",
    "crates/hyper-vm",
    "crates/hyper-control",
    "crates/hyper-qrse",
    "apps/hyper-pn52-doctor",
    "apps/hyper-uefi-probe",
    "apps/hyper-slate-kms-prototype",
    "apps/hyperctl",
    "apps/qrsectl",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["chain.new lab"]
rust-version = "1.84"

[workspace.dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
zeroize = "1"
hex = "0.4"
log = "0.4"
spin = "0.9"
heapless = "0.8"
uefi = "0.37"
uefi-services = "0.25"
x86_64 = "0.15"
acpi = "5"
