[package]
name = "hyper-slate-vm-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Phase V0 walkthrough: drive a signed capsule through the VM lifecycle on the host."

[dependencies]
hyper-capsule = { path = "../../crates/hyper-capsule" }
hyper-policy = { path = "../../crates/hyper-policy" }
hyper-receipts = { path = "../../crates/hyper-receipts" }
hyper-vm = { path = "../../crates/hyper-vm" }
