[package]
name = "hyper-attest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
hyper-slate-core = { path = "../hyper-slate-core" }
hyper-receipts = { path = "../hyper-receipts" }
