[package]
name = "hyper-capsule"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Signed VM capsule manifest parsing and the Untrusted->Verified type split (SOW Part B §1, §4, §8)."

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
