[package]
name = "hyper-control"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
hyper-vm = { path = "../hyper-vm" }
hyper-policy = { path = "../hyper-policy" }
hyper-receipts = { path = "../hyper-receipts" }
hyper-capsule = { path = "../hyper-capsule" }
hyper-attest = { path = "../hyper-attest" }
