[package]
name = "hyper-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deny-by-default policy engine for VM launch, key release, devices and network (SOW Part B §9)."

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
hyper-capsule = { path = "../hyper-capsule" }
