[package]
name = "hyper-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hyper-receipts = { path = "../hyper-receipts" }
serde.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
hyper-slate-core = { path = "../hyper-slate-core" }
