[package]
name = "hyper-qrse"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
hkdf.workspace = true
hmac.workspace = true
zeroize = { workspace = true, features = ["derive"] }
hex.workspace = true
thiserror.workspace = true
hyper-slate-core = { path = "../hyper-slate-core" }
hyper-receipts = { path = "../hyper-receipts" }
hyper-attest = { path = "../hyper-attest" }
