[package]
name = "hyper-receipts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Hash-chained, tamper-evident audit receipts for the Slate Runtime (SOW Part B §12)."

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
