[package]
name = "hyper-receipts"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
sha2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
