[package]
name = "hyper-vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "VM lifecycle state machine binding capsule verification, policy, and receipts (SOW Part B §2, §5)."

[dependencies]
thiserror.workspace = true
hyper-capsule = { path = "../hyper-capsule" }
hyper-policy = { path = "../hyper-policy" }
hyper-receipts = { path = "../hyper-receipts" }
